# ShriSudarshan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANTHROPIC_INTEGRATION_SUMMARY.md  APPROACH.md  DOCKER.md  DOCKER_EXAMPLES.md  Dockerfile  Dockerfile.gpu  FINBERT_FINGPT_IMPLEMENTATION_SUMMARY.md  FORMATTING_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MOCK_AGENTS_SUMMARY.md  Makefile  PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  TEST_COVERAGE_SUMMARY.md  VISUAL_OVERVIEW.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_docker_setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: README.md  build.yml  lint.yml  pytest-coverage.yml  security.yml  test.yml
docker/: .dockerignore  DOCKER.md  DOCKER_EXAMPLES.md  Dockerfile  Dockerfile.finrl  Dockerfile.janus-pro  README.md  docker-compose.yml  test_docker_setup.sh
docker/finrl/: agent.py  app.py  environment.py  requirements.txt
docker/janus-pro/: app.py  model.py  requirements.txt
docs/: AGENT_BEHAVIORS.md  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINBERT_FINGPT_INTEGRATION.md  INTEGRATION_TESTING.md  MIGRATION_GUIDE_FINBERT_FINGPT.md  MOCK_AGENTS.md  SYSTEM_PROMPTS.md  TESTING.md  TROUBLESHOOTING.md  architecture.md  getting_started.md
examples/: README_INTEGRATION_DEMO.md  advanced_usage.py  batch_analysis.py  demo_integration_tests.py  finbert_fingpt_usage.py  simple_analysis.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py
src/agents/execution/: __init__.py  equity_trader.py  fno_trader.py  rl_executor.py
src/agents/market_intelligence/: __init__.py  finbert_analyst.py  fingpt_analyst.py  fundamentals.py  macro_news.py  sentiment.py  technical.py  vision.py
src/agents/oversight/: __init__.py  portfolio_manager.py  reflective.py  risk_manager.py
src/agents/strategy_research/: __init__.py  bearish.py  bullish.py  derivatives.py  reasoning.py
src/config/: __init__.py  prompts.py  settings.py
src/data/: __init__.py  schemas.py
src/data/providers/: __init__.py  market_data.py  news.py
src/memory/: __init__.py  episodic.py  procedural.py  working.py
src/orchestration/: __init__.py  state.py  workflow.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  mock_agents.py  test_agent_base.py  test_agents_execution.py  test_agents_finbert_fingpt.py  test_agents_market_intelligence.py  test_agents_oversight.py  test_agents_strategy_research.py  test_config_settings.py  test_data_providers_market.py  test_data_providers_news.py  test_data_schemas.py  test_deep_reasoner_agents.py  test_execution_equity_trader.py  test_functional_workflow.py  test_integration_anthropic.py  test_market_intelligence_technical.py  test_memory_episodic.py  test_memory_procedural.py  test_memory_working.py  test_orchestration_state.py  test_orchestration_workflow.py  test_oversight_risk_manager.py  test_utils_logger.py
